adding swagger semua table
